--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   	  	<li>It rocks your world</li>
   	  </ul>	
 
-  	  <img src="lightbulp.png" alt="an Image of a lightbulp">
+  	  <img src="lightbulb.png" alt="an Image of a lightbulp">
 
   	</main>
 
